# ChangeLog for dev-lang/v8
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.156 2012/03/28 19:02:52 phajdan.jr Exp $

  28 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.8.9.16.ebuild:
  x86 stable wrt security bug #410045.

*v8-3.8.9.16 (26 Mar 2012)

  26 Mar 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.8.9.16.ebuild,
  -v8-3.8.9.13.ebuild:
  Version bump for beta channel release.

*v8-3.9.23 (24 Mar 2012)

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.9.11.ebuild,
  +v8-3.9.23.ebuild:
  Version bump for dev channel release. Remove old.

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.7.12.28.ebuild,
  v8-3.7.12.29.ebuild, v8-3.7.12.31.ebuild, v8-3.8.9.13.ebuild,
  v8-3.8.9.15.ebuild, v8-3.9.11.ebuild, v8-3.9.13.ebuild:
  Drop ~arm because it's broken: bug #401827, bug #401835.

*v8-3.7.12.31 (16 Mar 2012)

  16 Mar 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.7.12.31.ebuild:
  Version bump. chromium-18 is now targeting v8-3.7.

*v8-3.8.9.15 (16 Mar 2012)

  16 Mar 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.8.9.15.ebuild,
  -v8-3.8.9.8.ebuild:
  Version bump for beta channel release.

  09 Mar 2012; Mike Gilbert <floppym@gentoo.org> v8-3.7.12.29.ebuild:
  Stable on amd64 per ago. Bug 407465.

*v8-3.8.9.13 (08 Mar 2012)

  08 Mar 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.8.9.13.ebuild,
  -v8-3.8.9.6.ebuild:
  Version bump for beta channel release.

*v8-3.9.13 (08 Mar 2012)

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -v8-3.9.8.ebuild,
  +v8-3.9.13.ebuild:
  Version bump for dev channel release. Remove old.

*v8-3.7.12.29 (08 Mar 2012)

  08 Mar 2012; Mike Gilbert <floppym@gentoo.org> +v8-3.7.12.29.ebuild,
  -v8-3.7.12.20.ebuild, -v8-3.7.12.22.ebuild, -v8-3.7.12.27.ebuild:
  Version bump for stable channel release.

  07 Mar 2012; Thomas Kahle <tomka@gentoo.org> v8-3.7.12.28.ebuild:
  marked x86 per bug 406975
