@@ -1,6 +1,10 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.597 2012/03/28 19:03:47 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.598 2012/03/28 21:38:42 rich0 Exp $
+
+  28 Mar 2012; Richard Freeman <rich0@gentoo.org>
+  chromium-18.0.1025.142.ebuild:
+  amd64 stable - 410045
 
   28 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   chromium-18.0.1025.142.ebuild:
