@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/v8
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.156 2012/03/28 19:02:52 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/v8/ChangeLog,v 1.157 2012/03/28 21:34:42 rich0 Exp $
+
+  28 Mar 2012; Richard Freeman <rich0@gentoo.org> v8-3.8.9.16.ebuild:
+  amd64 stable - 410045
 
   28 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> v8-3.8.9.16.ebuild:
   x86 stable wrt security bug #410045.
